--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0-beta.0",
     "react-dom": "^18.2.0",
+    "react-push-notification": "^1.5.3",
     "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0",
     "use-history": "^1.4.1"
